# gnomegg

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  diesel.toml  spec.tex
migrations/2020-04-22-130038_create_users/: down.sql  up.sql
migrations/2020-04-22-212322_create_mutes/: down.sql  up.sql
migrations/2020-04-26-162321_create_bans/: down.sql  up.sql
src/: lib.rs  schema.rs
src/spec/: ban.rs  event.capnp  event.rs  mod.rs  mute.rs  schema.rs  spec.tex  user.rs
src/ws_http_server/: server.rs
src/ws_http_server/modules/: bans.rs  mod.rs  mutes.rs  name_resolver.rs  roles.rs
