[package]
name = "gnomegg"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
capnpc = "0.12.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive"] }
redis-async = "0.6.2"
