[package]
name = "gnomegg"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
capnpc = "0.12.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive"] }
redis-async = "0.6.2"
tokio = { version = "0.2.18", features = ["full"] }
r2d2 = "0.8.8"
mysql = "18.2.0"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "serde_json", "numeric"] }
async-trait = "0.1.30"
blake3 = "0.3.2"
